--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@semantic-release/git": "^10.0.1",
     "semantic-release": "^24.2.0",
     "semantic-release-pypi": "^4.0.3",
-    "@semantic-release/commit-analyzer": "^13.0.0"
+    "@semantic-release/commit-analyzer": "^13.0.0",
+    "conventional-changelog-conventionalcommits": "^8.0.0"
   }
 }
