--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,6 +6,24 @@ on:
       - '**'
 
 jobs:
+  ruff:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.12
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install poetry
+          poetry install
+      - name: Run Ruff Check
+        run: poetry run ruff check --output-format=github .
+      - name: Run Ruff Format
+        run: poetry run ruff format --check .
+
   test:
     runs-on: ubuntu-latest
     services:
