--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 requires = tox-gh-actions
 envlist =
+    clean
     py{38,39}-django{32,40,41,42}-postgres
     py{310,311,312}-django{32,40,41,42,50,51}-postgres
 skipsdist = True
@@ -9,6 +10,7 @@ skipsdist = True
 deps =
     setuptools
     pytest
+    pytest-cov
     pytest-django
     pytest-mock
     postgres: psycopg2-binary
@@ -19,7 +21,7 @@ deps =
     django50: django>=5.0,<5.1
     django51: django>=5.1,<5.2
 commands =
-    pytest ./tests --reuse-db
+    pytest ./tests --cov --cov-report=xml --cov-append --reuse-db
 setenv =
     DJANGO_SETTINGS_MODULE = tests.test_project.settings
     postgres: DATABASE_ENGINE=django.db.backends.postgresql
@@ -28,6 +30,11 @@ setenv =
     postgres: DATABASE_PASSWORD=password
     postgres: DATABASE_HOST=localhost
     postgres: DATABASE_PORT=5432
+
+[testenv:clean]
+deps = coverage
+skip_install = true
+commands = coverage erase
 
 [gh-actions]
 python =
