--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ pytest = "^8.3.3"
 pytest-django = "^4.9.0"
 pytest-mock = "^3.14.0"
 ruff = "^0.8.1"
+pytest-cov = "^5.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
