--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -58,8 +58,10 @@ jobs:
         run: tox
 
       - name: Upload coverage reports to Codecov
+        if: ${{ !cancelled() }}
         uses: codecov/codecov-action@v5
         with:
+          directory: ./reports
           token: ${{ secrets.CODECOV_TOKEN }}
 
   release:
