--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ deps =
     django50: django>=5.0,<5.1
     django51: django>=5.1,<5.2
 commands =
-    pytest ./tests --cov --cov-report=xml:./reports/coverage.xml --cov-append --reuse-db --junitxml=reports/junit-{envname}.xml
+    pytest ./tests --cov --cov-report=xml --cov-append --reuse-db --junitxml=reports/junit-{envname}.xml
 setenv =
     DJANGO_SETTINGS_MODULE = tests.test_project.settings
     postgres: DATABASE_ENGINE=django.db.backends.postgresql
